# mayastor-control-plane

control-plane/csi-driver/: Cargo.toml
control-plane/csi-driver/src/: client.rs  context.rs  lib.rs
control-plane/grpc/proto/v1/nexus/: nexus.proto
control-plane/grpc/proto/v1/replica/: replica.proto
control-plane/grpc/src/operations/nexus/: traits.rs
control-plane/grpc/src/operations/replica/: traits.rs
control-plane/plugin/src/: lib.rs
control-plane/plugin/src/resources/: error.rs  mod.rs  volume.rs
control-plane/rest/openapi-specs/: v0_api_spec.yaml
control-plane/rest/service/src/: main.rs
control-plane/rest/service/src/v0/: replicas.rs  volumes.rs
control-plane/rest/src/versions/: v0.rs
control-plane/stor-port/src/transport_api/: mod.rs  v0.rs
control-plane/stor-port/src/types/v0/store/: nexus.rs  node.rs  replica.rs
control-plane/stor-port/src/types/v0/transport/: child.rs  mod.rs  node.rs  replica.rs
deployer/src/infra/csi-driver/: node.rs
k8s/operators/src/diskpool/: crd.rs  main.rs
scripts/: release.sh
utils/deployer-cluster/src/: lib.rs
utils/pstor-usage/: Cargo.toml
utils/utils-lib/: Cargo.toml
utils/utils-lib/src/: lib.rs  message.rs  nats.rs  nats_connection.rs  publisher.rs  tracing_telemetry.rs
