[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
version-info = { path = "../dependencies/version-info", default-features = false }
git-version-macro = { path = "../dependencies/rust-git-version/git-version-macro" }

anyhow = "1.0.69"
async-nats = "0.28.0"
bytes = "1.4.0"
dashmap = "5.4.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4", "serde"] }